# src/domains/user/dto/telegram_sign_in.go
@@ -1,0 +1,10 @@
+package dto
+
+type TelegramSignInRequest struct {
+	TelegramId int64
+	ChatId     int64
+}
+
+type TelegramSignInResponse struct {
+	Token string
+}
