# src/domains/user/user_handlers.go
@@ -1,6 +1,7 @@
 package user
 
 import (
+	"fmt"
 	"github.com/IvaCheMih/chess/src/domains/user/dto"
 	"github.com/gofiber/fiber/v2"
 	"github.com/golang-jwt/jwt/v5"
@@ -70,10 +71,48 @@ func (h *UserHandlers) CreateUser(c *fiber.Ctx) error {
 		return c.SendStatus(fiber.StatusUnauthorized)
 	}
 
-	userData, err := h.usersService.CreateUser(clientPassword.Password)
+	userData, err := h.usersService.CreateUser(clientPassword.TelegramId, clientPassword.Password)
 	if err != nil {
 		return c.SendStatus(fiber.StatusNonAuthoritativeInformation)
 	}
 
 	return c.JSON(userData)
+}
+
+// TelegramSignIn godoc
+// @Summary telegram sign-in.
+// @Description telegram sign-in.
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param  user body  dto.TelegramSignInRequest true "request"
+// @Success 200 {object} dto.TelegramSignInResponse
+// @Router /user/sign-in/telegram/ [post]
+func (h *UserHandlers) TelegramSignIn(c *fiber.Ctx) error {
+	req, err := dto.GetTelegramSignInRequest(c)
+	if err != nil || req.TelegramId == 0 || req.ChatId == 0 {
+		log.Println(err)
+		return c.SendStatus(fiber.StatusUnauthorized)
+	}
+
+	userId, singIn, err := h.usersService.TelegramSignIn(req.TelegramId, req.ChatId)
+	if err != nil || !singIn {
+		return c.SendStatus(fiber.StatusUnauthorized)
+	}
+
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256,
+		jwt.MapClaims{
+			"userId": userId,
+		},
+	)
+	fmt.Println("token", token)
+
+	var response dto.CreateSessionResponse
+
+	response.Token, err = token.SignedString([]byte(h.jwtSecret))
+	if err != nil {
+		return c.SendStatus(fiber.StatusInternalServerError)
+	}
+
+	return c.JSON(response)
 }
